changed max-width to 100% to prevent overflow

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,6 +1,7 @@
 html, body {
-	height: 100%;
-	width: 100%;
+	min-height: 100%;
+	max-width: 100%;
+    overflow-x:none;
 	margin: 0;
 	padding: 0;
 	font-family: "HelveticaNeueLight", "HelveticaNeue-Light", "Helvetica Neue Light", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Arial", sans-serif;
